Changed Product Card

--- a/src/ui/header/header.css
+++ b/src/ui/header/header.css
@@ -1,6 +1,11 @@
 .header_background {
   background-color: #A28089;
   margin-bottom: 2%;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .header {
