--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -1,23 +1,30 @@
 .product_background {
-  padding: 10px;
   border-radius: 10px;
   max-width: 100%;
   width: 350px;
-  border: 3px solid #5cbdb9;
+  border: 3px solid #ecebeb;
   transition: 0.2s ease-in-out;
   text-transform: uppercase;
   &:hover {
-    border-color: #A28089;
+    border-color: #a28089;
   }
 }
 
 .product_background:hover .add_to_cart_button {
-  border-color: #A28089;
-  color: #A28089;
+  border-color: #a28089;
+  color: #a28089;
 }
 
 .product_background:hover .product_price {
-  color: #A28089;
+  color: #a28089;
+}
+
+.product_background:hover .line {
+  background-color: #a28089;
+}
+
+.product_background:hover .add_to_cart_button::before {
+  filter: invert(40%) sepia(20%) saturate(600%) hue-rotate(300deg);
 }
 
 .product_bottom {
@@ -33,21 +40,38 @@
 
 .product_title {
   text-align: center;
+  margin: 0px;
 }
 
 .add_to_cart_button {
+  position: relative;
   border: 2px solid #5cbdb9;
   color: #5cbdb9;
-  padding: 8px 20px;
-  background-color: #FFF;
+  padding: 8px 10px 8px 40px;
+  background-color: #fff;
   border-radius: 10px;
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
   transition: 0.2s ease-in-out;
+  overflow: hidden;
+  display: inline-flex;
+  align-items: center;
   &:hover {
     opacity: 0.6;
   }
+}
+
+.add_to_cart_button::before {
+  content: '';
+  background: url('/img/cart-icon.png') no-repeat center center;
+  background-size: 20px 20px;
+  position: absolute;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+  filter: invert(66%) sepia(27%) saturate(526%) hue-rotate(130deg);
+  transition: filter 0.2s ease-in-out;
 }
 
 .product_image_container {
@@ -56,4 +80,14 @@
 
 .product_description {
   color: #9e9e9e;
+}
+
+.product_info {
+  padding: 10px;
+}
+
+.line {
+  border: none;
+  height: 2px;
+  background-color: #5cbdb9;
 }
