--- a/src/components/cart/cartItem/cartItem.css
+++ b/src/components/cart/cartItem/cartItem.css
@@ -4,10 +4,11 @@
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
-  width: 550px;
 }
 
-.cart_item_title, .cart_item_price, .cart_item_category {
+.cart_item_category,
+.cart_item_title {
+  min-width: 100px;
   margin: 0px;
 }
 
@@ -15,9 +16,14 @@
   opacity: 0.5;
 }
 
+.cart_item_price {
+  min-width: 70px;
+}
+
 .cart_item_amount {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .cart_item_product_amount {
@@ -29,7 +35,7 @@
   border: none;
   background-color: #FFFFFF;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 24px;
   padding: 0px;
   margin: 0px;
   cursor: pointer;
@@ -38,6 +44,8 @@
 .cart_item_product_amount {
   border: 1px solid rgb(218, 218, 218);
   text-align: center;
+  width: auto;
+  min-width: 15px;
 }
 
 .cart_item_delete_button {
