--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -1,4 +1,17 @@
+.cart_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  z-index: 1000;
+}
+
 .cart {
+  width: 1000px;
   border: 3px solid rgb(218, 218, 218);
   border-radius: 30px;
   display: flex;
@@ -20,6 +33,8 @@
 .cart_left {
   width: 60%;
   padding: 20px 40px;
+  background-color: #FFFFFF;
+  overflow: hidden;
 }
 
 .cart_products {
@@ -56,6 +71,7 @@
 }
 
 .cart_right {
+  position: relative;
   background-color: #c6c6c6;
   width: 40%;
   padding: 70px 40px 50px 40px;
@@ -168,3 +184,16 @@
   }
 }
 
+.cart_right_close_cart_button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  border: none;
+  background-color: #c6c6c6;
+  cursor: pointer;
+  opacity: 0.7;
+  &:hover {
+    opacity: 1;
+  }
+}
