--- a/src/app/orders/orders.css
+++ b/src/app/orders/orders.css
@@ -1,3 +1,14 @@
 .orders_title {
   text-align: center;
 }
+
+.orders_sort {
+  background-color: #a28089;
+  color: #FFFFFF;
+  border-radius: 5px;
+  width: 200px;
+  height: 35px;
+  cursor: pointer;
+  outline: none;
+  text-align: center;
+}
