--- a/src/app/products/products.css
+++ b/src/app/products/products.css
@@ -4,6 +4,7 @@
 
 .products_top {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
@@ -11,13 +12,24 @@
 
 .products_title, .products_total_price {
   margin: 0px;
-  padding: 0px;
 }
 
 .products_grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+}
+
+@media (max-width: 950px) {
+  .products_grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 665px) {
+  .products_grid {
+    grid-template-columns: 1fr;
+  }
 }
 
 
