--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -11,7 +11,8 @@
 }
 
 .cart {
-  width: 1000px;
+  width: 90%;
+  max-width: 1000px;
   border: 3px solid rgb(218, 218, 218);
   border-radius: 30px;
   display: flex;
@@ -21,9 +22,14 @@
 
 .cart_left_top {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.cart_left_top_title {
+  margin: 0px;
 }
 
 .cart_products_amount {
@@ -52,7 +58,7 @@
 }
 
 .cart_products::-webkit-scrollbar-thumb {
-  background-color: #ccc;
+  background-color: #a28089;
   border-radius: 4px;
 }
 
@@ -209,7 +215,22 @@
   right: 20px;
   font-size: 24px;
   border: none;
-  background-color: #c6c6c6;
+  background-color: transparent;
+  cursor: pointer;
+  opacity: 0.7;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.cart_left_close_cart_button {
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 50px;
+  font-size: 24px;
+  border: none;
+  background-color: transparent;
   cursor: pointer;
   opacity: 0.7;
   &:hover {
@@ -263,4 +284,63 @@
 .loader_title {
   margin: 0px;
   color: #FFFFFF;
+}
+
+@media screen and (max-width: 920px) {
+  .cart_left, .cart_right {
+    width: auto;
+  }
+
+  .cart_products {
+    margin-bottom: 40px;
+    height: 250px;
+    overflow-y: scroll;
+  }
+
+  .cart_right {
+    height: 250px;
+    overflow-y: scroll;
+  }
+  
+  .cart_right::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .cart_right::-webkit-scrollbar-thumb {
+    background-color: #a28089;
+    border-radius: 4px;
+  }
+  
+  .cart_right::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+  }
+
+  .cart {
+    display: block;
+  }
+
+  .cart_right_close_cart_button {
+    display: none;
+  }
+
+  .cart_left_close_cart_button {
+    display: block;
+  }
+
+  .place_order_button {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .cart_left_close_cart_button {
+    top: 25px;
+    right: 50px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .place_order_button {
+    margin-bottom: 60px;
+  }
 }
