--- a/src/components/orderItem/orderItem.css
+++ b/src/components/orderItem/orderItem.css
@@ -39,6 +39,7 @@
 
 .order_top {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
@@ -159,6 +160,9 @@
   border: 1px solid #a28089;
   width: 0px;
   height: 20px;
+  &.delivered {
+    border-color: #5cbdb9;
+  }
 }
 
 .status_title,
@@ -174,4 +178,78 @@
 .total_price_text {
   margin: 0px;
   opacity: 0.6;
+  word-break: break-all;
+}
+
+.hr_separator {
+  display: none;
+}
+
+@media screen and (max-width: 800px) {
+  .order_info {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+  }
+
+  .order_top {
+    flex-direction: column;
+  }
+
+  .line_separator {
+    display: block;
+    border: 1px solid #a28089;
+    width: 100%;
+    height: 0px;
+    margin-bottom: 20px;
+  }
+
+  .order_item {
+    border-color: #a28089;
+  }
+
+  .status_info,
+  .shipping_type_info,
+  .address_info,
+  .total_price_info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .status_title,
+  .shipping_type_title,
+  .address_title,
+  .total_price_title {
+    margin: 0px;
+  }
+
+  .address_title, .total_price_title {
+    min-width: 80px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .product_container {
+    padding: 0px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product_name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .product_name {
+    white-space: normal;
+    overflow: visible;
+    text-overflow: clip;
+    width: auto;
+  }
 }
